--- a/accesorios.html
+++ b/accesorios.html
@@ -43,9 +43,9 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Mangueras para Combustible</a>
+                            <a class="dropdown-item" href="manguera-Para-Combustible.html">Mangueras para Combustible</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Otros</a>
+                            <a class="dropdown-item" href="otros.html">Otros</a>
                         </div>
                     </li>
                     <li class="nav-item">
