--- a/manguera-Para-Combustible.html
+++ b/manguera-Para-Combustible.html
@@ -63,23 +63,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <small>Conoce nuestras</small>
+                    <small>Linea Goodyear de</small>
                     <h3 class="text-center text-uppercase mb-4">
-                        Valvulas De Retencion
+                        Mangueras Para Combustible
                     </h3>
                 </div>
             </div>
             <div class="row">
-                <div id="ValvulaDePie" class="col-12 col-md-6 col-lg-4  pb-0  form-group">
-                    <a href="" data-target="#modalValvulaPie" data-toggle="modal">
+                <div id="MangueraRoja" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalManguera" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/valvula Pie 2.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/manguera Roja.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula De Pie
+                                                Manguera Goodyear Roja
                                             </span>
                                         </div>
                                     </div>
@@ -88,16 +88,16 @@
                         </div>
                     </a>
                 </div>
-                <div id="ValvulaBajoSurtidor" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
-                    <a href="" data-target="#modalValvulaBajo" data-toggle="modal">
+                <div id="MangueraVerde" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalManguera" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/BajoSurtidor1.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/manguera Verde.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula Bajo Surtidor
+                                                Manguera Goodyear Verde
                                             </span>
                                         </div>
                                     </div>
@@ -106,16 +106,34 @@
                         </div>
                     </a>
                 </div>
-                <div id="valvulaSimple" class="col-12 col-md-6 offset-md-3 offset-lg-0 col-lg-4 pb-0  form-group">
-                    <a href="" data-target="#modalValvulaSimple" data-toggle="modal">
+                <div id="MangueraNegra" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalManguera" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/valvula Simple.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/manguera Negra.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula Simple
+                                                Manguera Goodyear Negra
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div id="Manguera1Pulg" class="col-12 col-md-6 col-lg-4 offset-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalmanguera" data-toggle="modal">
+                        <div class="card bg-dark text-white">
+                            <img src="assets/img/productos/manguera 1 pulg.png" class="card-img" alt="...">
+                            <div class="card-img-overlay ">
+                                <div class="container">
+                                    <div class="row text-right">
+                                        <div class="col pb-2">
+                                            <span class="badge badge-pill badge-light  align-bottom">
+                                                Manguera Goodyear 1"
                                             </span>
                                         </div>
                                     </div>
@@ -213,12 +231,12 @@
     <!-- /Footer -->
 
 
-    <!-- Modal Valvula De Pie-->
-    <div class="modal fade " id="modalValvulaPie" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Mangueras-->
+    <div class="modal fade " id="modalManguera" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula De Pie</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Manguera Goodyear</h5>
                     </button>
                 </div>
                 <div class="modal-body">
@@ -234,16 +252,16 @@
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img src="assets/img/productos/valvula Pie 1.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                                <img src="assets/img/productos/Evertite3 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/valvula Pie 2.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                                <img src="assets/img/productos/Evertite3 (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/valvula Pie 1.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/Evertite3 (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/Evertite3 (4).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                         </div>
                                         </div>
@@ -282,150 +300,9 @@
                 </div>
             </div>
     </div>
-    <!--/Modal Valvula De Pie-->
+    <!--/Modal Mangueras-->
 
 
-    <!-- Modal Valvula Bajo Surtidor-->
-    <div class="modal fade " id="modalValvulaBajo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula Bajo Surtidor</h5>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12">
-                                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                                            <ol class="carousel-indicators">
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-                                            </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="assets/img/productos/BajoSurtidor1.png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                        </div>
-                                        </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 mt-2 text-center">
-                                <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dicta dolorem magni quod id sunt magnam quibusdam, hic numquam consequatur error alias tenetur nostrum soluta iusto, voluptatem vitae quisquam distinctio.
-                                </small>
-                            </div>
-                            <div class="col-12 col-md-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Peso: 3KG</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            <div class="col-6 text-center mt-2 mb-2">
-                                <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-dark" data-dismiss="modal">Cerrar</button>
-                </div>
-                </div>
-            </div>
-    </div>
-    <!--/Modal Valvula Bajo Surtidor-->
-
-    <!-- Modal Valvula Simple-->
-    <div class="modal fade " id="modalValvulaSimple" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Valvula Simple</h5>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-                                        </ol>
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img src="assets/img/productos/valvula Simple.png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                    </div>
-                                    </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 mt-2 text-center">
-                            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dicta dolorem magni quod id sunt magnam quibusdam, hic numquam consequatur error alias tenetur nostrum soluta iusto, voluptatem vitae quisquam distinctio.
-                            </small>
-                        </div>
-                        <div class="col-12 col-md-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Peso: 3KG</span>
-                        </div>
-                        <div class="col-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                        </div>
-                        <div class="col-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                        </div>
-                        <div class="col-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                        </div>
-                        <div class="col-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                        </div>
-                        <div class="col-6 text-center mt-2 mb-2">
-                            <span class="badge btn-VG p-2">Informacion Del Producto</span>
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Cerrar</button>
-            </div>
-            </div>
-        </div>
-</div>
-<!--/Modal Valvula Bajo Surtidor-->
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
