--- a/otros.html
+++ b/otros.html
@@ -63,23 +63,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <small>Conoce nuestras</small>
-                    <h3 class="text-center text-uppercase mb-4">
-                        Valvulas De Retencion
+                    <h3 class="text-center text-uppercase mb-4 mt-3">
+                        Otros
                     </h3>
                 </div>
             </div>
             <div class="row">
-                <div id="ValvulaDePie" class="col-12 col-md-6 col-lg-4  pb-0  form-group">
-                    <a href="" data-target="#modalValvulaPie" data-toggle="modal">
+                <div id="PastaDeAgua" class="col-12 col-md-6 col-lg-4  pb-0  form-group">
+                    <a href="" data-target="#modalPastaDeAgua" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/valvula Pie 2.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/pastaDeAgua.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula De Pie
+                                                Pasta de Prueba contra agua
                                             </span>
                                         </div>
                                     </div>
@@ -88,8 +87,8 @@
                         </div>
                     </a>
                 </div>
-                <div id="ValvulaBajoSurtidor" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
-                    <a href="" data-target="#modalValvulaBajo" data-toggle="modal">
+                <div id="BaldeAntiDerrames" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalBaldeAntiDerrames" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/BajoSurtidor1.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -97,7 +96,7 @@
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula Bajo Surtidor
+                                                Balde Anti Derrames
                                             </span>
                                         </div>
                                     </div>
@@ -106,8 +105,8 @@
                         </div>
                     </a>
                 </div>
-                <div id="valvulaSimple" class="col-12 col-md-6 offset-md-3 offset-lg-0 col-lg-4 pb-0  form-group">
-                    <a href="" data-target="#modalValvulaSimple" data-toggle="modal">
+                <div id="RepuestoDeTapa" class="col-12 col-md-6 offset-md-3 offset-lg-0 col-lg-4 pb-0  form-group">
+                    <a href="" data-target="#modalRepuestoDeTapa" data-toggle="modal">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/productos/valvula Simple.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
@@ -115,7 +114,7 @@
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Valvula Simple
+                                                Repuesto de Tapa
                                             </span>
                                         </div>
                                     </div>
@@ -213,12 +212,12 @@
     <!-- /Footer -->
 
 
-    <!-- Modal Valvula De Pie-->
-    <div class="modal fade " id="modalValvulaPie" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Pasta De Agua-->
+    <div class="modal fade " id="modalPastaDeAgua" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula De Pie</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Pasta De prueba contra agua</h5>
                     </button>
                 </div>
                 <div class="modal-body">
@@ -282,15 +281,15 @@
                 </div>
             </div>
     </div>
-    <!--/Modal Valvula De Pie-->
+    <!--/Modal Pasta De Agua-->
 
 
-    <!-- Modal Valvula Bajo Surtidor-->
-    <div class="modal fade " id="modalValvulaBajo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Balde Anti Derrames-->
+    <div class="modal fade " id="modalBaldeAntiDerrames" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Valvula Bajo Surtidor</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Balde Anti Derrames</h5>
                     </button>
                 </div>
                 <div class="modal-body">
@@ -354,14 +353,14 @@
                 </div>
             </div>
     </div>
-    <!--/Modal Valvula Bajo Surtidor-->
+    <!--/Modal Balde Anti Derrames-->
 
-    <!-- Modal Valvula Simple-->
-    <div class="modal fade " id="modalValvulaSimple" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Repuesto de Tapa-->
+    <div class="modal fade " id="modalRepuestoDeTapa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Valvula Simple</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Repuesto de Tapa</h5>
                 </button>
             </div>
             <div class="modal-body">
@@ -424,8 +423,8 @@
             </div>
             </div>
         </div>
-</div>
-<!--/Modal Valvula Bajo Surtidor-->
+    </div>
+    <!--/Modal Repuesto de Tapa-->
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
