--- a/picos-Dispensadores.html
+++ b/picos-Dispensadores.html
@@ -43,9 +43,9 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Mangueras para Combustible</a>
+                            <a class="dropdown-item" href="manguera-Para-Combustible.html">Mangueras para Combustible</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Otros</a>
+                            <a class="dropdown-item" href="otros.html">Otros</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -73,7 +73,7 @@
                 <div id="Pico11A" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalPico11A" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/Evertite3 (1).png" class="card-img" alt="...">
+                            <img src="assets/img/productos/pico 11-A 1.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -127,7 +127,7 @@
                 <div id="Anti-salpicadura" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalAnti-Salpicadura" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/Evertite4 (1).png" class="card-img" alt="...">
+                            <img src="assets/img/productos/anti salpicaduras.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -145,7 +145,7 @@
                 <div id="Giratorios" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalGiratorios" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/Tapa4 (1).png" class="card-img" alt="...">
+                            <img src="assets/img/productos/giratorios.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -163,7 +163,7 @@
                 <div id="Break-Away" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalBreak-Away" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/Buje4.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/break away.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
