--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Mangueras para Combustible</a>
+                            <a class="dropdown-item" href="manguera-Para-Combustible.html">Mangueras para Combustible</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Otros</a>
+                            <a class="dropdown-item" href="otros.html">Otros</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -62,7 +62,7 @@
     <!-- Hero -->
     <section id="hero" class="mt-4 pt-4">
         <div class="container-fluid pr-0 pl-0">
-            <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="none">
+            <div id="carousel" class="carousel slide carousel-fade mt-3" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="assets/img/Hero/valvulasDeRetencion.png" class="d-block w-100" alt="...">
@@ -157,7 +157,7 @@
                     </a>
                 </div>
                 <div id="ManguerasCombustible" class="col-12 col-md-6 col-lg-4 offset-lg-2  form-group">
-                    <a href="">
+                    <a href="manguera-Para-Combustible.html">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/portadas/portadaMangueras.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
@@ -173,7 +173,7 @@
                     </a>
                 </div>
                 <div id="Otros" class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-0  form-group">
-                    <a href="">
+                    <a href="otros.html">
                         <div class="card bg-dark text-white">
                             <img src="assets/img/portadas/portada valvulas.png" class="card-img" alt="...">
                             <div class="card-img-overlay">
@@ -203,19 +203,7 @@
             </div>
             <div class="row pt-2 pb-4">
                 <div class="col-12 col-lg-6 pl-0 pr-0">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="assets/img/Hero/portadaPicos.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/portadas/portadaMangueras.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/portadas/portadaAccesorios.png" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                    </div>
+                    <img src="assets/img/papiro.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col pl-4 pr-4 pt-2 pb-2">
                     <h5 class="text-center">
