--- a/accesorios.html
+++ b/accesorios.html
@@ -456,9 +456,13 @@
                                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                         <ol class="carousel-indicators">
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
+                                            <img src="assets/img/productos/Buje3 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
                                             <img src="assets/img/productos/Buje3.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                     </div>
@@ -649,9 +653,13 @@
                                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                         <ol class="carousel-indicators">
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
+                                            <img src="assets/img/productos/Buje4 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
                                             <img src="assets/img/productos/Buje4.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                     </div>
@@ -711,20 +719,16 @@
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                                             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
+                                            <img src="assets/img/productos/TapaExpansora (3).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/TapaExpansora (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
                                             <img src="assets/img/productos/TapaExpansora.png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                         </div>
                                     </div>
                                     </div>
@@ -780,22 +784,10 @@
                                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                             <ol class="carousel-indicators">
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
                                                 <img src="assets/img/productos/fuelle.png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor2.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor3.png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/BajoSurtidor4.png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                         </div>
                                         </div>
