--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="picos-Dispensadores.html">Picos Dispensadores</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="manguera-Para-Combustible.html">Mangueras para Combustible</a>
+                            <a class="dropdown-item" href="manguera-Para-Combustible.html">Mangueras para
+                                Combustible</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="otros.html">Otros</a>
                         </div>
@@ -64,13 +65,13 @@
         <div class="container-fluid pr-0 pl-0">
             <div id="carousel" class="carousel slide carousel-fade mt-3" data-ride="carousel" data-pause="none">
                 <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/img/Hero/valvulasDeRetencion.png" class="d-block w-100" alt="...">
-                        </div>
+                    <div class="carousel-item active">
+                        <img src="assets/img/Hero/valvulasDeRetencion.png" class="d-block w-100" alt="...">
+                    </div>
                     <div class="carousel-item">
                         <img src="assets/img/hero/portadaPicos.png" class="d-block w-100" alt="...">
                     </div>
-                    
+
                     <div class="carousel-item">
                         <img src="assets/img/portadas/portada valvulas.png" class="d-block w-100" alt="...">
                     </div>
@@ -205,7 +206,7 @@
                 <div class="col-12 col-lg-6 pl-0 pr-0">
                     <img src="assets/img/papiro.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="col pl-4 pr-4 pt-2 pb-2">
+                <div id="QuienesSomosText" class="col pl-4 pr-4 pt-2 pb-2">
                     <h5 class="text-center">
                         En 1950 nacía "Gómez e Hijos", fabricantes de piezas de bronce para el Ferrocarril Roca. Su
                         fundador, Alfonso Gómez, fue secundado por sus jóvenes hijos gemelos, Jorge y Osvaldo, quienes
