--- a/accesorios.html
+++ b/accesorios.html
@@ -784,9 +784,17 @@
                                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                             <ol class="carousel-indicators">
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="1" ></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="2" ></li>
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
+                                                <img src="assets/img/productos/fuelle (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            </div>
+                                            <div class="carousel-item ">
+                                                <img src="assets/img/productos/fuelle (3).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            </div>
+                                            <div class="carousel-item">
                                                 <img src="assets/img/productos/fuelle.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                         </div>
