--- a/picos-Dispensadores.html
+++ b/picos-Dispensadores.html
@@ -73,7 +73,7 @@
                 <div id="Pico11A" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalPico11A" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/pico 11-A 1.png" class="card-img" alt="...">
+                            <img src="assets/img/productos/pico 11-A (1).png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -109,7 +109,7 @@
                 <div id="Fundas" class="col-12 col-md-6 col-lg-4 pb-0  form-group">
                     <a href="" data-target="#modalFundas" data-toggle="modal">
                         <div class="card bg-dark text-white">
-                            <img src="assets/img/productos/Buje3.png" class="card-img" alt="...">
+                            <img src="assets/img/portadas/portadaFundas.png" class="card-img" alt="...">
                             <div class="card-img-overlay ">
                                 <div class="container">
                                     <div class="row text-right">
@@ -151,7 +151,7 @@
                                     <div class="row text-right">
                                         <div class="col pb-2">
                                             <span class="badge badge-pill badge-light  align-bottom">
-                                                Giratorios
+                                                Articulaciones
                                             </span>
                                         </div>
                                     </div>
@@ -282,22 +282,18 @@
                                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                             <ol class="carousel-indicators">
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="1" ></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="2" ></li>
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img src="assets/img/productos/Evertite3 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                                <img src="assets/img/productos/Pico 11-A (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite3 (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/Pico 11-A (3).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite3 (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite3 (4).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/Pico 11-A (1).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                         </div>
                                         </div>
@@ -353,18 +349,10 @@
                                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                         <ol class="carousel-indicators">
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
                                             <img src="assets/img/productos/Tapa3 (1).png" class="d-block w-100 ml-auto mr-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/Tapa3 (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="assets/img/productos/Tapa3 (2).png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                         </div>
                                     </div>
                                     </div>
@@ -420,10 +408,26 @@
                                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                         <ol class="carousel-indicators">
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="assets/img/productos/Buje3.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            <img src="assets/img/productos/combo rojo.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="assets/img/productos/combo verde.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="assets/img/productos/combo negro.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="assets/img/productos/funda gris.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <img src="assets/img/productos/funda azul.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                     </div>
                                     </div>
@@ -482,19 +486,23 @@
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                                                 <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                                                <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
                                             </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img src="assets/img/productos/Evertite4 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                                <img src="assets/img/productos/anti salpicaduras amarillo.png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite4 (3).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/anti salpicaduras azul.png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite4 (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/anti salpicaduras negro.png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="assets/img/productos/Evertite4 (4).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                                <img src="assets/img/productos/anti salpicaduras rojo.png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="assets/img/productos/anti salpicaduras verde.png" class="d-block w-100 mr-auto ml-auto" alt="...">
                                             </div>
                                         </div>
                                         </div>
@@ -540,7 +548,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Giratorios</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Articulaciones</h5>
                 </button>
             </div>
             <div class="modal-body">
@@ -551,13 +559,21 @@
                                         <ol class="carousel-indicators">
                                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                                             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="assets/img/productos/Tapa4 (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            <img src="assets/img/productos/giratorio (1).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="assets/img/productos/Tapa4 (1).png" class="d-block w-100 mr-auto ml-auto" alt="...">
+                                            <img src="assets/img/productos/giratorio (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/giratorio (3).png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="assets/img/productos/giratorio (4).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                     </div>
                                     </div>
@@ -616,7 +632,7 @@
                                         </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="assets/img/productos/Buje4.png" class="d-block w-100 ml-auto mr-auto" alt="...">
+                                            <img src="assets/img/productos/break away (2).png" class="d-block w-100 ml-auto mr-auto" alt="...">
                                         </div>
                                     </div>
                                     </div>
