--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Valvulas Gomez</title>
 </head>
 
-<body>
+<body id="body">
 
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -234,25 +234,40 @@
             </div>
             <div class="row pt-2 pb-4">
                 <div class="col-8 offset-2">
-                    <form>
+                    <form action="assets/php/mail.php" method="post">
                         <div class="form-row">
-                            <div class="col-12 col-lg-6 form-group">
-                                <input type="text" class="form-control" placeholder="Nombre">
+                            <div class="col-12 col-lg-4 offset-lg-2 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="nombre">Nombre</label> 
+                                </span>                              
+                                <input type="text" name="nombre" class="form-control">
                             </div>
-                            <div class="col-12 col-lg-6 form-group">
-                                <input type="text" class="form-control" placeholder="Apellido">
+                            <div class="col-12 col-lg-4 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="apellido">Apellido</label> 
+                                </span>                                      
+                                <input type="text" name="apellido" class="form-control" >
                             </div>
-                            <div class="col-12 form-group">
-                                <input type="text" class="form-control" placeholder="Correo Electronico">
+                            <div class="col-12 col-lg-6 offset-lg-2 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="email">E-Mail</label> 
+                                </span>     
+                                <input type="text" name="email" class="form-control">
                             </div>
-                            <div class="col-12 form-group">
-                                <textarea name="text" class="form-control form-control-lg"
-                                    placeholder="Escriba su mensaje..."></textarea>
+                            <div class="col-12 col-lg-8 offset-lg-2 form-group">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="asunto">Asunto</label> 
+                                </span>     
+                                <input type="text" name="asunto" class="form-control">
+                            </div>
+                            <div class="col-12 col-lg-8 offset-lg-2">
+                                <textarea name="text" name="mensaje" class="form-control form-control-lg"
+                                    placeholder="Escriba un mensaje..."></textarea>
                                 <small class="form-text text-muted" id="textAreaComment">Incluya un titulo en referencia
                                     al mensaje</small>
                             </div>
-                            <div class="col-12 col-lg-2">
-                                <button type="button" class="btn btn-success btn-block">Enviar!</button>
+                            <div class="col-12 col-lg-2 offset-lg-2">
+                                <button type="submit" name="submit" class="btn btn-success btn-block">Enviar!</button>
                             </div>
                         </div>
                     </form>
@@ -306,6 +321,26 @@
     </footer>
     <!-- /Footer -->
 
+    <!-- Pantalla de Carga -->
+    <section id="pantalla-de-carga">
+        <div class="container-fluid align-items-center">
+            <div class="row mb-4" id="img">
+                <div class="col-12 text-center">
+                <img id="logo" src="assets/img/logo.png" alt="">
+                </div>
+            </div>
+            <div class="row" id="spinner">
+                <div class="col-12 text-center">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- /Pantalla de Carga -->
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -317,6 +352,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <script src="assets/js/pantalla-de-carga.js"></script>
 </body>
 
 </html>
