--- a/manguera-Para-Combustible.html
+++ b/manguera-Para-Combustible.html
@@ -59,7 +59,7 @@
     <!-- /NavBar -->
 
     <!-- Productos -->
-    <section id="productos">
+    <section id="productos" class="pb-4">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
