--- a/picos-Dispensadores.html
+++ b/picos-Dispensadores.html
@@ -194,25 +194,40 @@
             </div>
             <div class="row pt-2 pb-4">
                 <div class="col-8 offset-2">
-                    <form>
+                    <form action="assets/php/mail.php" method="post">
                         <div class="form-row">
-                            <div class="col-12 col-lg-6 form-group">
-                                <input type="text" class="form-control" placeholder="Nombre">
+                            <div class="col-12 col-lg-5 offset-lg-1 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="nombre">Nombre</label> 
+                                </span>                              
+                                <input type="text" name="nombre" class="form-control">
                             </div>
-                            <div class="col-12 col-lg-6 form-group">
-                                <input type="text" class="form-control" placeholder="Apellido">
+                            <div class="col-12 col-lg-5 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="apellido">Apellido</label> 
+                                </span>                                      
+                                <input type="text" name="apellido" class="form-control" >
                             </div>
-                            <div class="col-12 form-group">
-                                <input type="text" class="form-control" placeholder="Correo Electronico">
+                            <div class="col-12 col-lg-5 offset-lg-1 mb-1">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="email">E-Mail</label> 
+                                </span>     
+                                <input type="text" name="email" class="form-control">
                             </div>
-                            <div class="col-12 form-group">
-                                <textarea name="text" class="form-control form-control-lg"
-                                    placeholder="Escriba su mensaje..."></textarea>
+                            <div class="col-12 col-lg-7 offset-lg-1 form-group">
+                                <span class="badge  badge-primary mb-1 ">
+                                    <label for="asunto">Asunto</label> 
+                                </span>     
+                                <input type="text" name="asunto" class="form-control">
+                            </div>
+                            <div class="col-12 col-lg-10 offset-lg-1">
+                                <textarea name="text" name="mensaje" class="form-control form-control-lg"
+                                    placeholder="Escriba un mensaje..."></textarea>
                                 <small class="form-text text-muted" id="textAreaComment">Incluya un titulo en referencia
                                     al mensaje</small>
                             </div>
-                            <div class="col-12 col-lg-2">
-                                <button type="button" class="btn btn-success btn-block">Enviar!</button>
+                            <div class="col-12 col-lg-3 offset-lg-1 ">
+                                <button type="submit" name="submit" class="btn btn-success btn-block">Enviar!</button>
                             </div>
                         </div>
                     </form>
