--- a/index.html
+++ b/index.html
@@ -238,26 +238,26 @@
                         <div class="form-row">
                             <div class="col-12 col-lg-5 offset-lg-1 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="nombre">Nombre</label> 
-                                </span>                              
+                                    <label for="nombre">Nombre</label>
+                                </span>
                                 <input type="text" name="nombre" class="form-control">
                             </div>
                             <div class="col-12 col-lg-5 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="apellido">Apellido</label> 
-                                </span>                                      
-                                <input type="text" name="apellido" class="form-control" >
+                                    <label for="apellido">Apellido</label>
+                                </span>
+                                <input type="text" name="apellido" class="form-control">
                             </div>
                             <div class="col-12 col-lg-5 offset-lg-1 mb-1">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="email">E-Mail</label> 
-                                </span>     
+                                    <label for="email">E-Mail</label>
+                                </span>
                                 <input type="text" name="email" class="form-control">
                             </div>
                             <div class="col-12 col-lg-7 offset-lg-1 form-group">
                                 <span class="badge  badge-primary mb-1 ">
-                                    <label for="asunto">Asunto</label> 
-                                </span>     
+                                    <label for="asunto">Asunto</label>
+                                </span>
                                 <input type="text" name="asunto" class="form-control">
                             </div>
                             <div class="col-12 col-lg-10 offset-lg-1">
@@ -322,7 +322,7 @@
     <!-- /Footer -->
 
     <!-- Pantalla de Carga -->
-    <section id="pantalla-de-carga">
+    <!-- <section id="pantalla-de-carga">
         <div class="container-fluid align-items-center">
             <div class="row mb-4" id="img">
                 <div class="col-12 text-center">
@@ -337,7 +337,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- /Pantalla de Carga -->
 
@@ -352,7 +352,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <script src="assets/js/pantalla-de-carga.js"></script>
+    <script src="assets/js/pantalla-de-carga.js"></script>
 </body>
 
 </html>
